--- a/app/views/greetings/rake_task.html.erb
+++ b/app/views/greetings/rake_task.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<center>
-					<h3>Parsing in background process!!!</h3>
+					<h3>Parsing start in background process!!!</h3>
 					<h3>Please wait!</h3>
 				</center>
 			</div>
