--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,10 @@
 	</div>
 	<div class="links">
 	<ul class="links_position">
-		<li><%= link_to "Parse with RakeTask", rake_task_path, class: 'parser' %></li>
-		<li><%= link_to "All News", all_posts_path, class: 'all_posts' %></li>
-		<li><%= link_to "Parse with RakeTask", "#" %></li>
+		<li><%= link_to 'Parse with RakeTask', rake_task_path, class: 'parser' %></li>
+		<li><%= link_to 'All News', all_posts_path, class: 'all_posts' %></li>
+		<li><%= link_to 'All news json', posts_json_path %></li>
+		<li><%= link_to 'Delete all Posts', delete_path, class: "delete_button" %>
 	</ul>
 	</div>
 </div>
