--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 	<ul class="links_position">
 		<li><%= link_to 'Parse with RakeTask', rake_task_path, class: 'parser' %></li>
 		<li><%= link_to 'All News', all_posts_path, class: 'all_posts' %></li>
-		<li><%= link_to 'All news json', posts_json_path %></li>
+		<li><%= link_to 'All news json', api_v1_posts_json_path %></li>
 		<li><%= link_to 'Delete all Posts', delete_path, class: "delete_button" %>
 	</ul>
 	</div>
